# Kub_Rag_Assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: cofig.py  config.py  main.py  observability.py
app/agents/: graph.py  state.py
app/gateways/: client.py
app/guardrails/: colang_rules.py  rails.py
app/ingestion/: processor.py
evals/: __init__.py  app.py  guardrails_eval.py  metrics.py  pipeline.py
processed_data/noisy/: 100G Networking Technology Overview - Slides - Toronto (August 2016).json  2018 CppCon Unwinding the Stack - Exploring how C++ Exceptions work on Windows - James McNellis.json  37 Million Compilations - Investigating Novice Programming Mistakes in Large-Scale Student Data (fp1187-altadmri).json  5-Level Paging and 5-Level EPT - Intel - Revision 1.0 (December, 2016).json  5-Level Paging and 5-Level EPT - Intel - Revision 1.1 (May, 2017).json  A Block-sorting Lossless Data Compression Algorithm - May 10th, 1994 (SRC-RR-124).json  A Brief Introduction to Neural Networks (neuronalenetze-en-zeta2-2col-dkrieselcom).json  A Brief Introduction to the Standard Annotation Language (SAL) - 2006.json  A Brief Tutorial on Database Queries, Data Mining, and OLAP (hamel-197-manuscript-final).json  A Case Study in Optimizing HTM-Enabled Dynamic Data Structures - Patricia Tries (2015).json  A Catalogue of Optimizing Transformations (1971-allen-catalog).json  A Comparison of Programming Languages in Economics (16-Jun-2014).json  A Forensic Analysis of CSG 11 Encounter with an Anomalous Aerial Vehicle.json  (+37 more)
scripts/: run_ingestion.py  test_pipeline.py
tests/: test_chunker.py  test_embeddings.py  test_loaders.py  test_processor.py
ui/: app.py
(+18 files in other folders)
