[project]
name = "kub-rag-assitant-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "flashrank>=0.2.10",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "logfire[fastapi,requests]>=4.37.0",
    "loguru>=0.7.3",
    "nemoguardrails>=0.23.0",
    "numpy>=2.5.0",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tenacity>=9.1.4",
    "tqdm>=4.68.3",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
